--- a/src/SbuBot/SbuBot.csproj
+++ b/src/SbuBot/SbuBot.csproj
@@ -8,7 +8,7 @@
     </PropertyGroup>
     
     <ItemGroup>
-      <ProjectReference Include="../../kkommon/src/Kkommon/Kkommon.csproj" />
+      <ProjectReference Include="..\Kkommon\Kkommon.csproj" />
     </ItemGroup>
 
     <ItemGroup>
