improved logging + made logs docker volume compatible

--- a/docker/template.env
+++ b/docker/template.env
@@ -4,3 +4,4 @@ BOT_POSTGRES__PORT=5432
 BOT_POSTGRES__DATABASE=sbu-bot-db
 BOT_POSTGRES__USERNAME=sbu-bot
 BOT_POSTGRES__PASSWORD=root
+BOT_LOG__PATH=logs
