--- a/docker/template.env
+++ b/docker/template.env
@@ -1,4 +1,5 @@
 BOT_DISCORD__TOKEN=token
+BOT_DISCORD__DEVTOKEN=devToken
 BOT_POSTGRES__HOST=127.0.0.1
 BOT_POSTGRES__PORT=5432
 BOT_POSTGRES__DATABASE=sbu-bot-db
