implemented auto responses

--- a/src/SbuBot/SbuBot.csproj
+++ b/src/SbuBot/SbuBot.csproj
@@ -67,6 +67,9 @@
       <Compile Update="Commands\Modules\DebugModule.Eval.cs">
         <DependentUpon>DebugModule.cs</DependentUpon>
       </Compile>
+      <Compile Update="Commands\Modules\GuildManagementModule.AutoResponse.cs">
+        <DependentUpon>GuildManagementModule.cs</DependentUpon>
+      </Compile>
     </ItemGroup>
 
 </Project>
