--- a/src/SbuBot/SbuBot.csproj
+++ b/src/SbuBot/SbuBot.csproj
@@ -100,6 +100,21 @@
       <Compile Update="Commands\Modules\ColorRoleModule.Transfer.cs">
         <DependentUpon>ColorRoleModule.cs</DependentUpon>
       </Compile>
+      <Compile Update="Evaluation\Inspection\Inspect.Enum.cs">
+        <DependentUpon>Inspect.cs</DependentUpon>
+      </Compile>
+      <Compile Update="Evaluation\Inspection\Inspect.Enumerable.cs">
+        <DependentUpon>Inspect.cs</DependentUpon>
+      </Compile>
+      <Compile Update="Evaluation\Inspection\Inspect.Extraction.cs">
+        <DependentUpon>Inspect.cs</DependentUpon>
+      </Compile>
+      <Compile Update="Evaluation\Inspection\Inspect.Formatting.cs">
+        <DependentUpon>Inspect.cs</DependentUpon>
+      </Compile>
+      <Compile Update="Evaluation\Inspection\Inspect.Object.cs">
+        <DependentUpon>Inspect.cs</DependentUpon>
+      </Compile>
     </ItemGroup>
 
 </Project>
