--- a/src/SbuBot/SbuBot.csproj
+++ b/src/SbuBot/SbuBot.csproj
@@ -100,6 +100,9 @@
       <Compile Update="Commands\Modules\ColorRoleModule.Transfer.cs">
         <DependentUpon>ColorRoleModule.cs</DependentUpon>
       </Compile>
+      <Compile Update="Commands\Modules\GuildManagementModule.Archive.Config.cs">
+        <DependentUpon>GuildManagementModule.Archive.cs</DependentUpon>
+      </Compile>
     </ItemGroup>
 
 </Project>
