added migration on startup + ovehauled migrationsc script

--- a/docker/template.env
+++ b/docker/template.env
@@ -1,6 +1,6 @@
 BOT_DISCORD__TOKEN=token
-BOT_DISCORD__DEVTOKEN=devToken
-BOT_POSTGRES__HOST=127.0.0.1
+# script determines ip of host in docker network
+# BOT_POSTGRES__HOST
 BOT_POSTGRES__PORT=5432
 BOT_POSTGRES__DATABASE=sbu-bot-db
 BOT_POSTGRES__USERNAME=sbu-bot
